--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
   push:
     branches: [main, master]
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   # Job 1: Type checking
   typecheck:
